# football-analytics

./: .editorconfig  .env.example  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  WORKSPACE_STAGE_MAP.md  dataset_registry.yaml  environment.yml  external_repos.lock.yaml  model_registry.yaml  pyproject.toml
.github/workflows/: ci.yml
artifacts/evidence/: README.md  index.json
configs/broadcast/: broadcast_routing_policy.yaml  camera_view_baseline.yaml  shot_boundary_baseline.yaml
configs/data/: schema_registry.yaml
requirements/: base.txt  ci.txt  constraints-ai-dev.txt  dev.txt
schemas/: archive_manifest.schema.json  environment_record.schema.json  resolved_config.schema.json  run_context.schema.json  run_manifest.schema.json
scripts/: archive_run.py  audit_current_state.py  bootstrap_external_repos.sh  check_aerial_clearance_baseline.py  check_appearance_reid_baseline.py  check_ball_detection_baseline.py  check_ball_tracking_baseline.py  check_broadcast_contracts.py  check_broadcast_pipeline.py  check_calibration_contracts.py  check_camera_view_baseline.py  check_ci_workflow.py  check_data_contracts.py  check_detection_contracts.py  check_detection_pipeline.py  check_distance_speed_sprint_baseline.py  check_duels_contracts.py  check_duels_pipeline.py  check_frame_timeline.py  check_ground_duel_baseline.py  check_heatmap_activity_baseline.py  check_homography_baseline.py  check_human_ball_interaction_contracts.py  check_human_ball_interaction_pipeline.py  check_human_ball_proximity_contact_baseline.py  check_human_detection_baseline.py  check_human_role_baseline.py  check_human_tracking_baseline.py  check_identity_contracts.py  check_jersey_ocr_baseline.py  check_pass_reception_baseline.py  check_passing_contracts.py  check_passing_metrics_baseline.py  check_passing_pipeline.py  check_physical_metric_contracts.py  check_physical_metric_pipeline.py  check_pitch_feature_baseline.py  check_pitch_projection_pipeline.py  check_possession_control_baseline.py  check_project.py  (+19 more)
(+958 files in other folders)
