[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analytics"
version = "0.1.0.dev0"
description = "Broadcast football video analytics pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "LicenseRef-Proprietary" }
authors = [{ name = "Furkan Doblak", email = "furkandoblak@gmail.com" }]
keywords = ["football", "soccer", "video-analytics", "computer-vision"]
dependencies = [
  "PyYAML>=6.0",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "isort>=5.13",
  "mypy>=1.8",
  "build>=1.2",
  "wheel>=0.43",
  "types-PyYAML>=6.0",
]
api = []
vision = []

[project.scripts]
football-analytics = "football_analytics.cli:main"

[project.urls]
Homepage = "https://github.com/furkandoblak/football-analytics"
Documentation = "https://github.com/furkandoblak/football-analytics#readme"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["football_analytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
  "unit: fast unit tests",
  "integration: integration tests",
  "gpu: requires GPU",
  "network: requires network",
  "slow: slow tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]
"tests/*" = ["E402", "B011"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "scripts", "tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["src/football_analytics"]
